test/TestPhases/typechecker/valid/testblackbox.blc
import internal b "../imports/blackbox"

@[EntryPoint]
activity Main ()
    var x: b.T 
    await b.f(x)
end